--- a/docs/.vuepress/styles/palette.scss
+++ b/docs/.vuepress/styles/palette.scss
@@ -28,12 +28,12 @@ $border-color: (
 
 /* layout */
 // navbar导航栏
-$navbar-height: 3.75rem;
+/*$navbar-height: 3.75rem;
 $navbar-horizontal-padding: 1.5rem;
 $navbar-vertical-padding: 0.7rem;
 $navbar-mobile-height: 3.25rem;
 $navbar-mobile-horizontal-padding: 1rem;
-$navbar-mobile-vertical-padding: 0.5rem;
+$navbar-mobile-vertical-padding: 0.5rem;*/
 // sidebar侧边栏
 //PC端宽度
 $sidebar-width: 24rem;
